--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Wildbeast</title>
   </head>
@@ -107,7 +112,7 @@
           <li>Família: Lupus</li>
         </ul>
 
-        <div>
+        <div class="info">
           <p>
             É um sobrevivente da Era do Gelo, originário do Pleistoceno
             Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e
@@ -126,15 +131,11 @@
       </main>
 
       <aside class="ads">
-        <div class="ads-item">
-          <img src="./img/anuncio-1.jpg" alt="anúncio 1">
-        </div>
-        <div class="ads-item">
-          <img src="./img/anuncio-2.jpg" alt="anúncio 2">
-        </div>
+        <img src="./img/anuncio-1.jpg" alt="anúncio 1" />
+        <img src="./img/anuncio-2.jpg" alt="anúncio 2" />
       </aside>
 
-      <footer>
+      <footer class="footer">
         <p>Origamid © 2012 - 2017. Alguns direitos reservados.</p>
       </footer>
     </div>
