--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
           </div>
         </div>
 
-        <p>
+        <p class="col-wide">
           É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
           cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos
           genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico
         </p>
 
-        <img src="./img/wolf1.jpg" alt="Lobo cinza" />
+        <img class="image-1" src="./img/wolf1.jpg" alt="Lobo cinza" />
 
         <p>
           É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
           cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.
         </p>
 
-        <img src="./img/wolf2.jpg" alt="Dois lobos cinza" />
+        <img class="image-2" src="./img/wolf2.jpg" alt="Dois lobos cinza" />
 
         <p>
           O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a
@@ -127,7 +127,7 @@
           </p>
         </div>
 
-        <img src="./img/wolf3.jpg" alt="Vários lobos cinza" />
+        <img class="col-wide" src="./img/wolf3.jpg" alt="Vários lobos cinza" />
       </main>
 
       <aside class="ads">
