--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <body>
     <div class="grid-structure">
       <header class="header">
-        <a href="#" class="logo"
-          ><img src="./img/wildbeast.svg" alt="Wildbeast logo"
-        /></a>
+        <a href="#" class="logo">
+          <img src="./img/wildbeast.svg" alt="Wildbeast logo"/>
+        </a>
         <nav>
           <ul>
             <li><a href="#sobre">sobre</a></li>
@@ -59,11 +59,11 @@
         <div class="characteristics">
           <div>
             <span class="number">72</span>
-            <span class="measure">kg</span>
+            <span class="label">kg</span>
           </div>
           <div>
             <span class="number">13</span>
-            <span class="measure">age</span>
+            <span class="label">age</span>
           </div>
         </div>
 
@@ -75,7 +75,7 @@
 
         <img class="image-1" src="./img/wolf1.jpg" alt="Lobo cinza" />
 
-        <p>
+        <p class="featured">
           É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior,
           cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.
         </p>
@@ -96,7 +96,7 @@
           Alasca, Canadá,[8] e na antiga União Soviética.
         </p>
 
-        <blockquote class="quote">
+        <blockquote class="quote col-wide">
           <p>
             “Há algo no uivar do lobo que tira um homem do aqui e agora e o
             transporta para uma floresta da mente.”
