create scroll and wrap sidenav to keep arrow fixed

--- a/index.html
+++ b/index.html
@@ -27,28 +27,30 @@
         </nav>
       </header>
 
-      <nav class="sidenav">
-        <ul>
-          <li>
-            <a href="#"><img src="./img/icones/cervo.svg" alt="Cervo" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/leao.svg" alt="Leão" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/gato.svg" alt="Gato" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/vaca.svg" alt="Vaca" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/ovelha.svg" alt="Ovelha" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./img/icones/abelha.svg" alt="Abelha" /></a>
-          </li>
-        </ul>
-      </nav>
+      <div class="sidenav-wrapper">
+        <nav class="sidenav">
+          <ul>
+            <li>
+              <a href="#"><img src="./img/icones/cervo.svg" alt="Cervo" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/icones/leao.svg" alt="Leão" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/icones/gato.svg" alt="Gato" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/icones/vaca.svg" alt="Vaca" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/icones/ovelha.svg" alt="Ovelha" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/icones/abelha.svg" alt="Abelha" /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
       <main class="content">
         <div class="title">
@@ -136,7 +138,7 @@
       </aside>
 
       <footer class="footer">
-        <p>Origamid © 2012 - 2017. Alguns direitos reservados.</p>
+        <p>Origamid © 2012 - 2017. Alguns direitos reservados. Paulo Bruny Lima.</p>
       </footer>
     </div>
   </body>
